# image-validation-worker

./: .dockerignore  .env  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 176f27160e08_initial_migration.py  78d1f7eac793_init.py  9a8f864f06eb_create_imagevalidationresult_table.py  a97548be1a6b_init.py
app/: main.py  sync-worker-example.py  sync-worker.py  worker.py
app/config/: aio_boto.py  aio_consumer.py  asyncio_consumer.py  env_config.py  minio.py  minio_connection.py  rabbitmq.py  rabbitmq_connection.py
app/db/: database.py  entity.py  models.py  mongo.py
app/message_queue/: aio_consumer.py  consume_message.py  publish_message.py
app/service/: blank_detector.py  validation_service.py
app/storage/: aio_boto.py  aio_consumer.py
app_old/: main.py
app_old/config/: blocking_rabbitmq.py  minio.py
app_old/service/: blank_detector.py
blocking_app/: main.py
blocking_app/config/: rabbitmq.py
consumer/asyncio_consumer/: asyncio_comsumer.py
consumer/blocking_consumer/: blocking_consumer.py
consumer/custom_blocking_consumer/config/: blocking_rabbitmq.py  minio.py
consumer/select_consumer/: select_consumer.py
example/: async-publisher-example.py  async_consumer_example.py  asyncio_connection_example.py  asyncio_consumer_example.py  cocoutine.py  select_connection_example.py  task_cocoutine.py  task_coroutine_monitor.py  task_pararell_coroutine_monitor.py
