[project]
name = "image-validation-worker"
version = "0.1.0"
description = "image validation worker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "aio-pika>=9.5.5",
    "aioboto3~=14.3.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.16.2",
    "black>=25.1.0",
    "boto3>=1.37.3",
    "deskew>=1.5.3",
    "msgspec>=0.19.0",
    "numpy>=2.3.1",
    "opencv-python-headless>=4.11.0.86",
    "pika>=1.3.2",
    "pillow>=11.2.1",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "shapely>=2.1.1",
    "sqlalchemy>=2.0.41",
    "uuid7>=0.1.0",
]
